# pdf-parsing

./: pyproject.toml
notebooks/: pdfminer.ipynb
src/: parser.py
